Add - Login and Register

--- a/src/WebBanDienThoai.MVC/Views/Access/Register.cshtml
+++ b/src/WebBanDienThoai.MVC/Views/Access/Register.cshtml
@@ -31,7 +31,7 @@
     <!-- Nepcha Analytics -->
     <script defer data-site="YOUR_DOMAIN_HERE" src="https://api.nepcha.com/js/nepcha-analytics.js"></script>
     <!-- Add Google Maps JavaScript API -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBqIm1BH4Z2iXUobBw9w98dpCIIyRLP-QE&libraries=places,geometry"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjBOhlC7914uPrWPffPIHZO8mTzcgtkow&libraries=places,geometry"></script>
     <style>
         /* Điều chỉnh kích thước map container */
         .map-container {
@@ -142,10 +142,10 @@
                                                     <span asp-validation-for="@Model.Email" class="text-danger"></span>
                                                 </div>
 
-                                                <div class="form-item">
+                                                @* <div class="form-item">
                                                     <label class="form-label my-3" for="Hinh">Hình<sup>*</sup></label>
                                                     <input type="file" name="Hinh" class="form-control" />
-                                                </div>
+                                                </div> *@
                                             </div>
 
                                             <div class="row g-4 text-center align-items-center justify-content-center pt-4">
