--- a/src/WebBanDienThoai.MVC/Views/Access/Login.cshtml
+++ b/src/WebBanDienThoai.MVC/Views/Access/Login.cshtml
@@ -98,7 +98,18 @@
                                         <a asp-controller="Access" asp-action="ForgotPassword" class="text-secondary text-decoration-none mx-3">Forgot Password?</a>
                                         <span class="text-muted">|</span>
                                         <a asp-controller="Access" asp-action="Register" class="text-primary text-gradient font-weight-bold mx-3">Sign up</a>
+
                                     </div>
+                     
+                                     <div d-flex justify-content-center mt-2 text-center>
+                                         <a asp-controller="Access" asp-action="LoginByGoogle" class="social-login-btn">
+                                             <div class="google-btn">
+                                                 <div class="google-icon-wrapper">
+                                                     <img style="width: 40px; height: 30px; border-radius: 50%; " class="google-icon" src="..\LayoutAdmin\assets\img\logos\icon_google.jpg" />
+                                                 </div>
+                                             </div>
+                                         </a>
+                                     </div>
                             }
                                 @* </form> *@
                             </div>
